--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -20,10 +19,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ['BELLY_SIZE'] = '200'\n",
+    "os.environ['BELLY_LOCATION'] = 'gs://spain-tweets/datalake-test'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from schemas import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_schema = create_schema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -45,18 +82,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": null,
    "name": "python3"
   },
   "language_info": {
