--- a/explore.ipynb
+++ b/explore.ipynb
@@ -26,12 +26,12 @@
     "import os\n",
     "\n",
     "os.environ['BELLY_SIZE'] = '200'\n",
-    "os.environ['BELLY_LOCATION'] = 'gs://spain-tweets/datalake-test'"
+    "os.environ['BELLY_LOCATION'] = 'gs://spain-tweets/datalake'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "ein.hycell": false,
